<resources>
    <string name="app_name">Jiro</string>
    <string name="Login">LOGIN</string>
    <string name="app_name_home">MarkTech Home</string>
    <string name="ForgotPassword">Forgot Password</string>
    <string name="showpassword">Show Password</string>
    <string name="hide_password">Show Password</string>
    <string name="show_password">Show Password</string>
    <string name="correct_username_without_space">Enter username without any space</string>
    <string name="loading">Loading&#8230;</string>
    <string name="please_wait">Please wait</string>
    <string name="correct_user_name">Enter your username</string>
    <string name="username_minimum_limit">Enter username should have atleast 6 characters</string>
    <string name="correct_password">Enter your password</string>
    <string name="password_limit_correct">The password should have minimum 6 characters</string>
    <string name="url_reference">http://52.74.16.253/jiro/</string>
    <string name="nointernetaccess">No Internet Access</string>
    <string name="nointernetconnection">No Internet Connection</string>
    <string name="password_space">Enter the password without spaces</string>
    <string name="password_error">Check above data for errors and try again</string>
    <string name="account_inactivate">Your account is currently inactivate</string>
    <string name="developedby">Powered by PurpleFront</string>
    <string name="no_internet_splashscreen">Internet not available, connect to internet and try again</string>


    <string name="shipping_address">Shipping Address</string>

    <string name="select_one">Select One</string>

    <string name="showProduct">Products</string>

    <string name="address1">Address</string>


    <string name="customattr">Custom Attribute</string>
    <string name="otherdetail">Other Details</string>

    <string name="tax">Tax Details</string>

    <string name="billing_address">Billing Address</string>


    <string name="retry">Retry</string>
    <string name="cancel">Cancel</string>

    <string name="vieweditprofile_name_hint">Enter your name</string>

    <string name="phone">Phone</string>
    <string name="email">Email</string>

    <string name="custcont">Customer Contact</string>

    <string name="mem_name">Name</string>

    <string name="name">Name</string>

    <string name="disprolename">(Role)</string>

    <string name="visitdate">Visit Date</string>

    <string name="role">Role</string>

    <string name="cusname">Customer Name</string>

    <string name="contactname">Contact Name</string>


    <string name="catalogname">Catalog Name</string>

    <string name="subtotal">SubTotal</string>

    <string name="contact">Phone No</string>

    <string name="ordercreatesuccess">Order Created Successfully</string>

    <string name="customerapprove">Customer Approve Successfully</string>

    <string name="customer_remove_success">Customer removed successfully</string>

    <string name="createvisitsuccess">Visit Created Successfully</string>

    <string name="chkinvisit">CheckIn Visited Successfully</string>

    <string name="ordercustsuccess"> Customer Created Successfully</string>


    <string name="attributesuccess"> Custom Attribute Created Successfully</string>

    <string name="attributesave">Attributes are saved successfully</string>

    <string name="total">Total:</string>

    <string name="Nettotal">Net Total:</string>

    <string name="qty"> QTY:</string>

    <string name="billingadd">Billing Address</string>


    <string name="shippingadd">Shipping Address</string>

    <string name="profile_id">Profile Id</string>

    <string name="status">Status</string>


    <string name="catname">Catalog Name</string>

    <string name="address">Addresses</string>

    <string name="viewmembers">View Members</string>


    <string name="customer_Name">Customer</string>

    <string name="customer_contact1">Contact</string>

    <string name="cust_contactd">Contact</string>


    <string name="customer_address">Address</string>


    <string name="vieworders">View Orders</string>

    <string name="members">Members</string>


    <string name="chkin">CheckIn</string>

    <string name="customers">Customers</string>

    <string name="orders">Orders</string>

    <string name="catalog">Catalog</string>

    <string name="viewcustomers">View Customers</string>

    <string name="viewcontacts">View Contacts</string>

    <string name="approvecus">Approve</string>

    <string name="reject">Reject</string>

    <string name="order">Order</string>

    <string name="catalogs">Catalogs</string>


    <string name="assignto">Assign To</string>

    <string name="notes">Notes</string>

    <string name="visitdateandtime">Visit Date and Time</string>

    <string name="checkingtime">Checking Time</string>

    <string name="customattributes">Other Details</string>

    <string name="chooseproducts">Choose Products</string>

    <string name="lbl_name">TextView</string>

    <string name="lbl_plus">+</string>

    <string name="lbl_minus">-</string>


    <string name="categroies">Categroies</string>
    <string name="products">Products</string>

    <string name="nodata">No Records Found</string>

    <string name="addcart">Add Cart</string>


    <string name="nocontacts">There are no contacts for this customer</string>



    <string name="nomembers">There is no Members under this group</string>

    <string name="nosegment">There is No Segment for this Customer</string>


    <string name="product">Add Product</string>

    <string name="productname">Enter the product Name</string>

    <string name="actionbar_text_color">#ffffff</string>

    <string name="preregistration_existinguser">LOGIN</string>

    <string name="url_reference1">http://52.74.16.253/marktech/</string>

    <string-array name="planets_array">

        <item>Catalog</item>
        <item>View/Edit Profile</item>
        <item>Change Password</item>
        <item>Logout</item>
        <item>Exit</item>
    </string-array>
    <string-array name="uom_qty">

        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <string name="changepassword_oldpassword_hint">Enter current password</string>
    <string name="changepassword_newpassword">New password</string>
    <string name="changepassword_newpassword_hint">Enter new password</string>


    <string name="profile_local_online">Profile not found</string>
    <string name="correct__name">Enter name</string>
    <string name="correct_email">Enter email</string>
    <string name="correct_user_name1">Enter your username</string>
    <string name="correct_username_without_space1">Enter username without any space</string>
    <string name="password_reset_error">Some error occurred while resetting your password. Try again</string>

    <string name="unknownerror">Some thing went wrong contact PurpleFront for the issue.</string>
    <string name="unknownerror2">Some error occurred try again</string>
    <string name="unknownerror4">An error occurred while accessing Database try clearing Database and use email you are already registered with</string>
    <string name="unknownerror3">An Unknown error occurred try again restarting the app</string>
    <string name="unknownerror5">Some error occurred please try again after some time</string>
    <string name="unknownerror6">Error contacting server try again after some time</string>
    <string name="unknownerror7">No response from server</string>
    <string name="unknownerror8">Error contacting server</string>
    <string name="unknownerror9">Error accessing server try reloading the page</string>



    <!-- Reset Password -->
    <string name="resetpassword_heading">Reset Password</string>
    <string name="resetpassword_textemail">Enter your username (Email)</string>
    <string name="resetpassword_submit">Reset Password</string>
    <string name="resetpassword_note">Your username must match with our records. You will get an email with the password information.</string>
    <string name="resetpassword_success">Success</string>
    <string name="resetpassword_success_message">Your password has been reset. Check your email for instructions.</string>



    <string name="changepassword_success">Your password has been changed successfully</string>

    <string name="ok">OK</string>
    <string name="password_online_local_different">Old password does not match</string>
    <string name="changepassword_confirmnewpassword_hint">Enter confirm password</string>
    <string name="changepassword_showpassword">Show Password</string>
    <string name="Changepassword_submit">Submit</string>

    <string name="password_new">Enter New password</string>
    <string name="correct_confirm_password">Enter your confirm password</string>
    <string name="password_new_limit">New password should have more than 6 letters</string>

    <string name="password_match">Passwords match</string>

    <string name="password_correct2">Try again with the correct password</string>

    <string name="password_confirm_password_not_match">Password and confirm password does not match</string>




    <string name="confirm_password_limit_correct">Note confirm password should have minimum 6 characters</string>


    <string name="dialog_password_wrong_title">Wrong username or password</string>
    <string name="dialog_password_wrong_message">"If you have forgotten the password use forgot password link or click cancel to try again</string>
    <string name="dialog_password_wrong_button">Forgot Password</string>
    <string name="dialog_password_wrong_button2">Cancel</string>
    <string name="email_password">Enter correct username and password</string>

    <string name="action_settings">Settings</string>

    <string name="enter_email">Enter email</string>

    <string name="registration_phone_hint">Phone*</string>

    <string name="number_only">0123456789()+- .</string>

    <string name="enter_phone">Enter phone</string>

    <string name="vieweditprofile_name">Name*</string>

    <string name="registration_email_hint">Email*</string>

    <string name="nointernetconnection1">No Internet Connection</string>
    <string name="selectcusandcontact">Please Select Customer and Contact</string>
    <string name="selecttax">Please Select the Tax</string>


    <string name="selectcuscont">Please Select the Customer and Contact</string>


    <string name="enter_name">Enter Customer Name</string>

    <string name="enter_attr">Enter Attribute Name</string>

    <string name="expected_visittime">Expected Visit Date/Time</string>

    <string name="enter_notes">Enter Customer Notes</string>
    <string name="selectcatalogname">Please Select the Catalog</string>
    <string name="selectassignuser">Please Select the User</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="product_code">Product code</string>
    <string name="product_description">Description</string>
    <string name="product_specification">Specification</string>
    <string name="demo_video">Demo video</string>
    <string name="request_information">Request Information</string>
    <string name="no_items">No Items available!!</string>
</resources>
