<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    style="@style/layout"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/resetpassword_textemail"
            android:visibility="gone"
            style="@style/TextviewStyle_space"
            android:id="@+id/resetpassword_textemail"
            android:layout_gravity="center" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress|textNoSuggestions"
            android:ems="10"
            android:background="@drawable/apptheme_edit_text_holo_light"
            android:hint="@string/resetpassword_textemail"
            style="@style/EditTextviewStyle"
            android:id="@+id/resetpassword_email"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resetpassword_submit"
            android:id="@+id/resetpassword_submit"
            android:textSize="23sp"
            style="@style/Button_style"
            android:layout_marginTop="20dp"
            android:layout_gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_margin="30dp"
            android:text="@string/resetpassword_note"
            android:id="@+id/resetpassword_note"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/resetpassword_success"
            style="@style/TextviewStyle"
            android:id="@+id/resetpassword_success"
            android:visibility="gone"
            android:layout_gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/resetpassword_success_message"
            android:layout_margin="30dp"
            style="@style/TextviewStyle"
            android:visibility="gone"
            android:id="@+id/resetpassword_success_message"
            android:layout_gravity="center" />

    </LinearLayout>
</ScrollView>