<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:padding="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_height="match_parent">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <EditText android:id="@+id/phoneno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Email or PhoneNo"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <EditText android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Password"
            android:inputType="textPassword"/>



    </android.support.design.widget.TextInputLayout>


    <CheckBox
        android:id="@+id/existinguser_checkbox"
        android:layout_width="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="left"
        android:layout_height="wrap_content"
        android:text="@string/showpassword"
        android:textColor="@color/green"/>



    <Button android:id="@+id/login"
        android:layout_width="@dimen/buttonwidth"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:textColor="@color/white"
        android:background="@color/blue"
        android:text="@string/Login"/>

    <TextView android:id="@+id/forpass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/ForgotPassword"/>






</LinearLayout>
