<?xml version="1.0" encoding="utf-8"?>


<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="#fff1f0">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/Layout2_lightred"
    android:layout_width="match_parent"
    android:background="#fff1f0"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#919191"
        android:id="@+id/categorylayout"
        android:visibility="gone"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/keyline_1_minus_8dp"
            android:textSize="20sp"
            android:textColor="@color/md_white_1000"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/categroies"
            android:id="@+id/textView20" />

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/keyline_1_minus_8dp"
            android:textSize="20sp"
            android:layout_marginTop="250dp"
            android:layout_marginBottom="8dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:visibility="gone"
            android:text="@string/nodata"
            android:id="@+id/nocatagory" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#919191"
        android:visibility="gone"
        android:layout_marginTop="40dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/keyline_1_minus_8dp"
            android:textSize="20sp"
            android:textColor="@color/md_white_1000"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/products"
            android:id="@+id/textView21" />
    </LinearLayout>











</LinearLayout>

</ScrollView>