<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="#fff1f0">


<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/Layout2_lightred"
    android:layout_width="match_parent"
    android:background="#fff1f0"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1">




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#919191"
        android:id="@+id/categorylayout"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/keyline_1_minus_8dp"
            android:textSize="20sp"
            android:visibility="gone"
            android:textColor="@color/md_white_1000"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/categroies"
            android:id="@+id/textView20" />
    </LinearLayout>


    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/nodata"
        android:visibility="gone"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:textSize="@dimen/textsize"
        android:gravity="center"
        android:layout_marginTop="@dimen/margin_top_txtView"
        android:text="@string/nodata"/>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#919191"
        android:id="@+id/productslayout"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/keyline_1_minus_8dp"
            android:textSize="20sp"
            android:visibility="gone"
            android:textColor="@color/md_white_1000"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/products"
            android:id="@+id/textView21" />
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view1"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       />

</LinearLayout>

    </ScrollView>