<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/table_row_default_horizontal_padding"
            android:paddingEnd="@dimen/table_row_default_padding_side"
            android:id="@+id/lincurpwd"
            android:paddingRight="@dimen/table_row_default_padding_side"
            android:onClick="clickPass"
            android:paddingTop="22dp"
            android:weightSum="1">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/image_margin_side"
                android:layout_marginStart="@dimen/image_margin_side"
                android:tint="@color/iconTint"
                android:src="@drawable/ic_https_white_24dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/text_margin_side"
                android:layout_marginStart="@dimen/text_margin_side"
                android:background="@android:color/transparent"
                android:hint="@string/changepassword_oldpassword_hint"
                android:id="@+id/changepassword_password"
                android:inputType="textPassword"
                android:textColorHighlight="@color/accentLight"
                android:textColorHint="@color/textLightGray"
                android:textSize="16sp"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_separator_height"
            android:layout_marginLeft="@dimen/line_separator_margin_side_large"
            android:layout_marginStart="@dimen/line_separator_margin_side_large"
            android:background="@color/lightGray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/table_row_default_horizontal_padding"
            android:paddingEnd="@dimen/table_row_default_padding_side"
            android:paddingRight="@dimen/table_row_default_padding_side"
            android:id="@+id/linnewpw"
            android:onClick="clickNewpw"
            android:paddingTop="22dp"
            android:weightSum="1">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/image_margin_side"
                android:layout_marginStart="@dimen/image_margin_side"
                android:tint="@color/iconTint"
                android:src="@drawable/ic_https_white_24dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/text_margin_side"
                android:layout_marginStart="@dimen/text_margin_side"
                android:background="@android:color/transparent"
                android:id="@+id/changepassword_newpassword"
                android:hint="@string/changepassword_newpassword_hint"
                android:inputType="textPassword"
                android:textColorHighlight="@color/accentLight"
                android:textColorHint="@color/textLightGray"
                android:textSize="16sp"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_separator_height"
            android:layout_marginLeft="@dimen/line_separator_margin_side_large"
            android:layout_marginStart="@dimen/line_separator_margin_side_large"
            android:background="@color/lightGray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/table_row_default_horizontal_padding"
            android:paddingEnd="@dimen/table_row_default_padding_side"
            android:paddingRight="@dimen/table_row_default_padding_side"
            android:id="@+id/linconpwd"
            android:onClick="clickConPwd"
            android:paddingTop="22dp"
            android:weightSum="1">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/image_margin_side"
                android:layout_marginStart="@dimen/image_margin_side"
                android:tint="@color/iconTint"
                android:src="@drawable/ic_https_white_24dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/text_margin_side"
                android:layout_marginStart="@dimen/text_margin_side"
                android:background="@android:color/transparent"
                android:id="@+id/changepassword_confirmpassword"
                android:hint="@string/changepassword_confirmnewpassword_hint"
                android:inputType="textPassword"
                android:textColorHighlight="@color/accentLight"
                android:textColorHint="@color/textLightGray"
                android:textSize="16sp"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_separator_height"
            android:layout_marginLeft="@dimen/line_separator_margin_side_large"
            android:layout_marginStart="@dimen/line_separator_margin_side_large"
            android:background="@color/lightGray" />


        <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
            android:textColor="@color/md_green_500"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:layout_marginLeft="@dimen/image_margin_side"

            android:text="@string/changepassword_showpassword"
        android:id="@+id/changepassword_showpassword" />

    <Button
        android:layout_width="120dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:textColor="@color/md_white_1000"
        android:background="@color/blue"
        android:layout_height="wrap_content"
        android:text="@string/Changepassword_submit"
        android:id="@+id/changepassword_submit" />

    </LinearLayout>
</ScrollView>